--- a/imports/ui/components/rideAdd/rideAdd.html
+++ b/imports/ui/components/rideAdd/rideAdd.html
@@ -59,7 +59,8 @@
         <br>
         <div>
           <br>
-          <a class="waves-effect waves-light btn" ng-disabled="!rideAdd.isFormValid()"  ng-click="rideAdd.submit()" >Add Ride!</a>
+          <!--ng-disabled="!rideAdd.isFormValid()"-->
+          <a class="waves-effect waves-light btn"  ng-click="rideAdd.submit()" >Add Ride!</a>  
           <a class="waves-effect waves-light btn" ui-sref="rides">Back</a>
         </div>
       </div>
@@ -69,7 +70,9 @@
  <!-- Modal Structure -->
   <div id="successPostModal" class="modal">
     <div class="modal-content">
-      <h4>You have successfully submitted your post</h4>
+      <h4>You have successfully submitted your post.
+        We have sent an email to the given address. 
+        Please follow the instructions on your email for your post to be public</h4>
       <p>Hints: You can update or delete your post using 'Manage Rides' option</p>
       <br><br>
       <a ui-sref="rides" class="waves-effect waves-light btn center" ng-click="rideAdd.closeHowItWorksModal()" >Ok</a>
