--- a/imports/ui/components/sharegaadi/sharegaadi.html
+++ b/imports/ui/components/sharegaadi/sharegaadi.html
@@ -39,10 +39,10 @@
       <i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="brown-text text-darken-2" ui-sref="rides"><b>HOME</b></a></li>
-      <li ng-hide="sharegaadi.isLoggedIn">
+      <!--<li ng-hide="sharegaadi.isLoggedIn">
         <a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(false);"><b>POST A TRIP</b></a>
-      </li>
-      <li ng-show="sharegaadi.isLoggedIn">
+      </li>-->
+      <li>
         <a class="brown-text text-darken-2" ui-sref="addRide"><b>POST A TRIP</b></a>
       </li>
       <li ng-hide="sharegaadi.isLoggedIn">
@@ -63,7 +63,7 @@
       <li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(true)"><b>SIGN IN</b></a></li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="addRide"><b>POST A TRIP</b></a></li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="myRides" style="color: #795548"><b>MANAGE RIDES</b></a></li>
-      <li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)"><b>POST A TRIP</b></a></li>
+      <!--<li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)"><b>POST A TRIP</b></a></li>-->
       <!--<li><a class="brown-text text-darken-2" ng-click="sharegaadi.openHowItWorksModal()"><b>How it works</b></a></li>-->
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.logout()" ng-show="sharegaadi.isLoggedIn" style="color: #795548"><b>LOGOUT</b></a></li>
       <li><a class="brown-text text-darken-2" ui-sref="feedback">FEEDBACK?</a></li>
@@ -85,7 +85,7 @@
       <div class="col l4 offset-l2 s12">
         <ul>
           <li ng-hide="sharegaadi.isLoggedIn"><a class="white-text text-darken-2" ng-click="sharegaadi.openSignInModal(true)">Login</a></li>
-          <li ng-hide="sharegaadi.isLoggedIn"><a class="white-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)">Post A Trip</a></li>
+          <!--<li ng-hide="sharegaadi.isLoggedIn"><a class="white-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)">Post A Trip</a></li>-->
           <li ng-show="sharegaadi.isLoggedIn"><a class="white-text text-darken-2" ui-sref="addRide">Post A Trip</a></li>
           <li><a class="white-text text-darken-2" ui-sref="feedback">Feedback?</a></li>
           <li><a class="white-text text-darken-2" ui-sref="feedback">Help Us To Improve</a></li>
