some more changes

--- a/imports/ui/components/email_verification/email_verification.html
+++ b/imports/ui/components/email_verification/email_verification.html
@@ -1,1 +1,5 @@
-ID: {{email_verification.id}}
+<br><br><br><br><br>
+<h4 class="center" ng-show="email_verification.showMsg">
+    Your email have been successfully verified
+</h4>
+<br><br><br><br><br>
