--- a/imports/ui/components/ridesList/ridesList.html
+++ b/imports/ui/components/ridesList/ridesList.html
@@ -56,6 +56,7 @@
 <br>
 <div class="row container">
   <div dir-paginate="ride in ridesList.rides | itemsPerPage: ridesList.perPage" total-items="ridesList.ridesCount">
+    <div ng-if="ride.verified==true">
     <div class="col s12 m6 l4">
       <ul class="collection">
         <li class="collection-item avatar card-panel grey lighten-3">
@@ -85,6 +86,7 @@
       </ul>
     </div>
   </div>
+</div>
 </div>
 <dir-pagination-controls on-page-change="ridesList.pageChanged(newPageNumber)"></dir-pagination-controls>
 </div>
