--- a/imports/ui/components/sharegaadi/sharegaadi.html
+++ b/imports/ui/components/sharegaadi/sharegaadi.html
@@ -46,7 +46,7 @@
         <a class="brown-text text-darken-2" ui-sref="addRide"><b>POST A TRIP</b></a>
       </li>
       <li ng-hide="sharegaadi.isLoggedIn">
-        <a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(true)"><b>SIGN IN</b></a>
+        <a class="brown-text text-darken-2" ui-sref="login"><b>SIGN IN</b></a>
       </li>
       <li></li>
       <!--<li><a class="waves-effect waves-light btn" ui-sref="addRide">Post A Trip</a></li>-->
@@ -60,7 +60,7 @@
         <a> {{ sharegaadi.currentUser | displayNameFilter }}</a>
       </li>
       <li><a class="brown-text text-darken-2" ui-sref="rides"><b>HOME</a></li>
-      <li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(true)"><b>SIGN IN</b></a></li>
+      <li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="login"><b>SIGN IN</b></a></li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="addRide"><b>POST A TRIP</b></a></li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="myRides" style="color: #795548"><b>MANAGE RIDES</b></a></li>
       <!--<li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)"><b>POST A TRIP</b></a></li>-->
