--- a/imports/ui/components/sharegaadi/sharegaadi.html
+++ b/imports/ui/components/sharegaadi/sharegaadi.html
@@ -24,6 +24,7 @@
 <ul id="dropdown2" class="dropdown-content">
   <li ng-show="sharegaadi.isLoggedIn && sharegaadi.isAdmin"><a ui-sref="admin" style="color: #795548">Admin</a></li>
   <li ng-show="sharegaadi.isLoggedIn"><a ui-sref="myRides" style="color: #795548">Manage Rides</a></li>
+  <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="changePwd" style="color: #795548"><b>Change Password</b></a></li>
   <li ng-show="sharegaadi.isLoggedIn"><a ng-click="sharegaadi.logout()" ng-show="sharegaadi.isLoggedIn" style="color: #795548">Logout</a></li>
 </ul>
 <nav>
@@ -63,6 +64,7 @@
       <li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="login"><b>SIGN IN</b></a></li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="addRide"><b>POST A TRIP</b></a></li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="myRides" style="color: #795548"><b>MANAGE RIDES</b></a></li>
+      <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="changePwd" style="color: #795548"><b>Change Password</b></a></li>
       <!--<li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)"><b>POST A TRIP</b></a></li>-->
       <!--<li><a class="brown-text text-darken-2" ng-click="sharegaadi.openHowItWorksModal()"><b>How it works</b></a></li>-->
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.logout()" ng-show="sharegaadi.isLoggedIn" style="color: #795548"><b>LOGOUT</b></a></li>
