--- a/imports/ui/components/sharegaadi/sharegaadi.html
+++ b/imports/ui/components/sharegaadi/sharegaadi.html
@@ -29,25 +29,19 @@
 </ul>
 <nav>
   <div class="nav-wrapper white">
-    <!--<img src="img/vimaana_logo.png" style="height: 35px; width: 50px">-->
     <a href="/" class="brand-logo">
-      <!--<i class="fa fa-vimeo fa-lg brown" aria-hidden="true"></i>-->
-      <!--<i class="material-icons md-48  hide-on-med-and-down">directions_car</i>-->
-      <b class="brown-text text-darken-2" style="font-style: italic;">Vimaana</b>
-      <span class="light orange-text text-darken-3">Rides</span>
+      <b class="brown-text text-darken-2">&nbsp;&nbsp;WeDesi</b>
+      <span class="light orange-text text-darken-3" style="font-size: 12px"><b>Classifieds</b></span>
     </a>
     <a href="#" data-activates="mobile-demo" class="button-collapse brown-text text-darken-2">
       <i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="brown-text text-darken-2" ui-sref="rides"><b>HOME</b></a></li>
-      <!--<li ng-hide="sharegaadi.isLoggedIn">
-        <a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(false);"><b>POST A TRIP</b></a>
-      </li>-->
       <li>
-        <a class="brown-text text-darken-2" ui-sref="addRide"><b>POST A TRIP</b></a>
+        <a class="brown-text text-darken-2" ui-sref="newAd"><b>POST AN AD</b></a>
       </li>
       <li ng-hide="sharegaadi.isLoggedIn">
-        <a class="brown-text text-darken-2" ui-sref="login"><b>SIGN IN</b></a>
+        <a class="brown-text text-darken-2" ui-sref="login"><b>MY ACCOUNT</b></a>
       </li>
       <li></li>
       <!--<li><a class="waves-effect waves-light btn" ui-sref="addRide">Post A Trip</a></li>-->
