--- a/imports/ui/components/ridesList/ridesList.html
+++ b/imports/ui/components/ridesList/ridesList.html
@@ -56,7 +56,7 @@
 <br>
 <div class="row container">
   <div dir-paginate="ride in ridesList.rides | itemsPerPage: ridesList.perPage" total-items="ridesList.ridesCount">
-    <div ng-if="ride.verified==true">
+    <div ng-if="true">
     <div class="col s12 m6 l4">
       <ul class="collection">
         <li class="collection-item avatar card-panel grey lighten-3">
