--- a/imports/ui/components/uploads/uploads.html
+++ b/imports/ui/components/uploads/uploads.html
@@ -1,20 +1,22 @@
-<div layout="column">
-
 <form name="form">
-  <a ngf-select ngf-change="uploads.addImageFiles($files)" ngf-multiple="true">Select Files To Upload</a>
+  <div class="input-field row s12 l12 m12">
+    <span class="col s6 l6 m6">
+          <a ngf-select ngf-change="uploads.addImageFiles($files)" ngf-multiple="true">Upload Images</a>
   <br>OR
   <div ngf-drop ng-model="uploads.files" class="drop-box">Drop Files Here</div>
-  <br>
-  <a class="waves-effect waves-light btn" ng-click="uploads.addImages()">submit</a>
-  <br>
-</form>
-
-<div ng-repeat="file in uploads.files">
-  Files: {{file.name}}
+          </span>
+    <span class="col s6 l6 m6">
+            <div ng-repeat="file in uploads.files">
+   {{file.name}}
 <img ngf-thumbnail="file" ngf-size="{width: 40, height: 40, quality: 1.0}">
 </div>
+           </span>
+  </div>
 
-  <!--<div ngf-drop
+  <!--<a class="waves-effect waves-light btn" ng-click="uploads.addImages()">submit</a>-->
+ 
+</form>
+<!--<div ngf-drop
     ngf-select
     ngf-change="uploads.addImages($files)"
     ngf-drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}"
@@ -45,4 +47,3 @@
     </div>
   </div>
 </div>-->
-</div>
