--- a/imports/ui/components/landing_page/landing_page.html
+++ b/imports/ui/components/landing_page/landing_page.html
@@ -4,26 +4,26 @@
         <div class="col s12 m6 l4">
             <div class="card hoverable blue-grey darken-1">
                 <div class="card-content white-text">
-                    <span class="card-title">Rentals</span>
+                    <span class="card-title"><a ui-sref="rentals">Rentals</a></span>
                     <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
                         require little markup to use effectively.</p>
                 </div>
                 <div class="card-action">
-                    <a href="#">Offer Rentals</a>
-                    <a href="#">Need Rentals</a>
+                    <a ui-sref="rentals">Offer Rentals</a>
+                    <a ui-sref="rentals">Need Rentals</a>
                 </div>
             </div>
         </div>
         <div class="col s12 m6 l4">
             <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
-                    <span class="card-title">Roommates</span>
+                    <span class="card-title"><a ui-sref="roommates">Roommates</a></span>
                     <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
                         require little markup to use effectively.</p>
                 </div>
                 <div class="card-action">
-                    <a href="#">Offer Room</a>
-                    <a href="#">Need Room</a>
+                    <a ui-sref="roommates">Offer Room</a>
+                    <a ui-sref="roommates">Need Room</a>
                 </div>
             </div>
         </div>
