--- a/imports/ui/components/landing_page/landing_page.html
+++ b/imports/ui/components/landing_page/landing_page.html
@@ -1,7 +1,40 @@
 <br>
 <div class="container">
     <div class="row">
-        <div class="col s12 m6 l4">
+        <div class="col s6 m4 l3">
+        <i class="fa fa-home fa-4x fa-border" aria-hidden="true"></i>
+        <br><a ui-sref="rentals">Rentals</a>
+        </div>
+        <div class="col s6 m4 l3">
+        <i class="fa fa-building fa-4x fa-border" aria-hidden="true"></i>
+        <br><a ui-sref="roommates">Roommates</a>
+        </div>
+        <div class="col s6 m4 l3">
+        <i class="fa fa-users fa-4x fa-border" aria-hidden="true"></i>
+        <br>Rideshare
+        </div>
+        <div class="col s6 m4 l3">
+        <i class="fa fa-briefcase fa-4x fa-border" aria-hidden="true"></i>
+        <br>Jobs
+    </div> 
+    </div>
+    <div>
+    <div class="row">
+        <div class="col s6 m4 l3">
+        <i class="fa fa-car fa-4x fa-border" aria-hidden="true"></i>
+        <br>Used Cars
+        </div>
+        <div class="col s6 m4 l3">
+        <i class="fa fa-mobile fa-4x fa-border" aria-hidden="true"></i>
+        <br>Buy & Sell
+        </div>
+        <div class="col s6 m4 l3">
+        <i class="fa fa-globe fa-4x fa-border" aria-hidden="true"></i>
+        <br>Other Services
+        </div>
+    </div>
+
+        <!--<div class="col s12 m6 l4">
             <div class="card hoverable blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title"><a ui-sref="rentals">Rentals</a></span>
@@ -66,7 +99,7 @@
                     <a href="#">Others</a>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
    
     <!--<div class="carousel">
