--- a/imports/ui/components/rentals/rentals.html
+++ b/imports/ui/components/rentals/rentals.html
@@ -2,8 +2,30 @@
   <input style="border-radius: 4px;" type="text" ng-model="rentals.searchText" placeholder="  SEARCH..." 
           capitalize onfocus="this.placeholder = ''" onblur="this.placeholder = '  SEARCH...'" />
   <div dir-paginate="rental in rentals.rentals | itemsPerPage: rentals.perPage" total-items="rentals.rentalsCount">
-   
-   <ul class="collection">
+   <div class="col s12 l4">
+    
+  <div class="card white">
+            <div class=" card-content black-text">
+              <h5>{{rental.beds}} Bedroom {{rental.subcategory}} in {{rental.location.replace(', United States', '')}}  </h5>
+              <span class="row">
+                <span class="col s3">
+        {{rental.price | currency:"$":0 }}/Mon 
+         </span>
+          <span class="col s3">
+         {{rental.sqft}} Sqft
+         </span>
+          <span class="col s5">
+         Avail: {{rental.dateFrom | date:'d MMM yy'}}
+         </span>
+         <span class="col s4">
+        Email Verified
+         </span>
+              </span>
+        
+            </div>
+      </div>
+   </div>
+   <!--<ul class="collection">
       <li class="collection-item">
        <span class="row">
          <span class="col s2">
@@ -32,7 +54,7 @@
           </span>
        </span>
       </li>
-    </ul>
+    </ul>-->
    
    
    
