--- a/imports/ui/components/sharegaadi/sharegaadi.css
+++ b/imports/ui/components/sharegaadi/sharegaadi.css
@@ -1,6 +1,6 @@
 html {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 12px;
   }
 
 .material-icons.md-18 { font-size: 18px; }
