--- a/imports/ui/components/sharegaadi/sharegaadi.html
+++ b/imports/ui/components/sharegaadi/sharegaadi.html
@@ -66,10 +66,36 @@
     </ul>
   </div>
 </nav>
+<div class="row col l12" style="background-color: #E7807B">
+  <div class="col l3 offset-l2">
+    <div class="input-field">
+      <select class="browser-default">
+    <option value="" disabled selected>Select</option>
+    <option value="1">Rentals</option>
+    <option value="2">Roommates</option>
+    <option value="3">Rideshare</option>
+    <option value="4">Jobs</option>
+    <option value="5">Used Cars</option>
+    <option value="6">Services</option>
+  </select>
+    </div>
+  </div>
+  <!--<div class="col l1 center">
+    <br>in
+  </div>-->
+    <div class="col l3 left" style="margin-top: 10px">
+    <input placeholder="     Location" ng-model="newRentals.form.location" details="newRentals.form.placeDetails" googleplace id="start_loc"
+         class=" white black-text" type="text">
+    </div>
+    <div class="col l1">
+        <a style="margin-top: 10px" class="waves-effect waves-light btn white black-text" ng-click="newAd.onNext()">Search</a>
+    </div>
+  </div>
+</div>
 <div>
   <div ui-view=""></div>
 </div>
-<footer class="page-footer brown lighten-2">
+<!--<footer class="page-footer brown lighten-2">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -81,7 +107,6 @@
       <div class="col l4 offset-l2 s12">
         <ul>
           <li ng-hide="sharegaadi.isLoggedIn"><a class="white-text text-darken-2" ng-click="sharegaadi.openSignInModal(true)">Login</a></li>
-          <!--<li ng-hide="sharegaadi.isLoggedIn"><a class="white-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)">Post A Trip</a></li>-->
           <li ng-show="sharegaadi.isLoggedIn"><a class="white-text text-darken-2" ui-sref="addRide">Post A Trip</a></li>
           <li><a class="white-text text-darken-2" ui-sref="feedback">Feedback?</a></li>
           <li><a class="white-text text-darken-2" ui-sref="feedback">Help Us To Improve</a></li>
@@ -95,7 +120,7 @@
       <span class="brown-text text-darken-2 center"> © 2017 Copyrights Team Vimaana </span>
     </div>
   </div>
-</footer>
+</footer>-->
 <div class="fixed-action-btn" ng-show="sharegaadi.isLoggedIn">
   <a class="btn-floating btn-large orange darken-3" ui-sref="addRide">
     <i class="large material-icons">add</i>
@@ -106,6 +131,7 @@
     $(".button-collapse").sideNav({
       closeOnClick: true
     });
+    $('select').material_select();
     $(".dropdown-button").dropdown();
     $(".dropdown-button1").dropdown();
   })
