--- a/imports/ui/components/landing_page/landing_page.html
+++ b/imports/ui/components/landing_page/landing_page.html
@@ -1,146 +1,15 @@
-<br>
-<div class="container">
-    <div class="row">
-        <div class="col s6 m4 l3">
-        <i class="fa fa-home fa-4x fa-border" aria-hidden="true"></i>
-        <br><a ui-sref="rentals">Rentals</a>
-        </div>
-        <div class="col s6 m4 l3">
-        <i class="fa fa-building fa-4x fa-border" aria-hidden="true"></i>
-        <br><a ui-sref="roommates">Roommates</a>
-        </div>
-        <div class="col s6 m4 l3">
-        <i class="fa fa-users fa-4x fa-border" aria-hidden="true"></i>
-        <br>Rideshare
-        </div>
-        <div class="col s6 m4 l3">
-        <i class="fa fa-briefcase fa-4x fa-border" aria-hidden="true"></i>
-        <br>Jobs
-    </div> 
-    </div>
-    <div>
-    <div class="row">
-        <div class="col s6 m4 l3">
-        <i class="fa fa-car fa-4x fa-border" aria-hidden="true"></i>
-        <br>Used Cars
-        </div>
-        <div class="col s6 m4 l3">
-        <i class="fa fa-mobile fa-4x fa-border" aria-hidden="true"></i>
-        <br>Buy & Sell
-        </div>
-        <div class="col s6 m4 l3">
-        <i class="fa fa-globe fa-4x fa-border" aria-hidden="true"></i>
-        <br>Other Services
-        </div>
-    </div>
-
-        <!--<div class="col s12 m6 l4">
-            <div class="card hoverable blue-grey darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title"><a ui-sref="rentals">Rentals</a></span>
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                        require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a ui-sref="rentals">Offer Rentals</a>
-                    <a ui-sref="rentals">Need Rentals</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m6 l4">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title"><a ui-sref="roommates">Roommates</a></span>
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                        require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a ui-sref="roommates">Offer Room</a>
-                    <a ui-sref="roommates">Need Room</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m6 l4">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title">RideShare</span>
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                        require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">Offer Ride</a>
-                    <a href="#">Need Ride</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m6 l4">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title">Jobs</span>
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                        require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">Offer Job</a>
-                    <a href="#">Need Job</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m6 l4">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title">Other Classifieds</span>
-                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                        require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">Buy and Sell</a>
-                    <a href="#">Services</a>
-                    <a href="#">Others</a>
-                </div>
-            </div>
-        </div>-->
-    </div>
-   
-    <!--<div class="carousel">
-    <h5>Recent Rentals</h5>
-    <a class="carousel-item" href="#one!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#two!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#three!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-  </div>
-  
-    <div class="carousel">
-    <h5>Recent Roommates</h5>
-    <a class="carousel-item" href="#one!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#two!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#three!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-  </div>
-  
-    <div class="carousel">
-    <h5>Recent Rides</h5>
-    <a class="carousel-item" href="#one!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#two!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#three!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/smoke_road.jpg"></a>
-  </div>-->
+<div class="container center" style="margin-top: 80px">
+<a ng-class="{'green': landingPage.hover, 'white':!landingPage.hover}" 
+    ng-mouseenter="landingPage.hover = true"
+    ng-mouseleave="landingPage.hover = false"
+   ui-sref="roommates" class="waves-effect waves-light btn-large black-text" style="width: 250px">
+<i class="material-icons right">home</i>Roommates
+</a> 
+<br><br>
+<a ng-class="{'green': landingPage.hover1, 'white':!landingPage.hover1}" 
+    ng-mouseenter="landingPage.hover1 = true"
+    ng-mouseleave="landingPage.hover1 = false"
+   ui-sref="rides" class="waves-effect waves-light btn-large white black-text" style="width: 250px">
+        <i class="material-icons right">directions_car</i>Rideshare
+</a>
 </div>
-<script>
-  $(document).ready(function () {
-    $('.carousel').carousel({
-      indicators: true,
-      padding:5,
-      dist:5
-    });
-  })
-</script>
