--- a/imports/ui/components/newAd/newAd.html
+++ b/imports/ui/components/newAd/newAd.html
@@ -1,33 +1,91 @@
-<h4 class="center">Post An AD</h4>
-<br>
-<div class="row">
-    <form class="col s12 m6 l6  offset-m3 offset-l3" name="myForm"  novalidate>
-      <div class="row">
-        <div class="input-field">
-    <select ng-model="newAd.category">
-      <option value="" disabled selected>Select Post Type</option>
-      <optgroup label="Rentals">
-        <option value="1">I Want To Offer Rentals</option>
-        <option value="2">I Am Looking for Rentals</option>
-      </optgroup>
-      <optgroup label="Roommates">
-        <option value="3">I Want To Offer Room </option>
-        <option value="4">I Am Looking for Room</option>
-      </optgroup>
-      <optgroup label="Rideshare">
-        <option value="5">I Want To Offer Ride</option>
-        <option value="6">I Am Looking for Ride</option>
-      </optgroup>
-    </select>
-        </div>
-      </div>
-      <div>
-          <a class="waves-effect waves-light btn right" ng-click="newAd.onNext()">Next</a>
-      </div>
-    </form>
-    <br>
-    <br>
-</div>
+<main>
+  <!--<h5>Post An AD</h5>-->
+  <center>
+    <div class="row">
+      <ul class="collapsible" data-collapsible="expandable">
+        <li>
+          <div class="collapsible-header left-align brown lighten-2 white-text first">Select Post Type</div>
+          <div class="collapsible-body container">
+            <form>
+              <div class="input-field">
+                <select ng-model="newAd.category" ng-change="newAd.onTypeChange()">
+                <option value="" disabled selected>Select</option>
+                  <option value="Rental_Offer">Rental Offer</option>
+                  <option value="Rental_Request">Rental Request</option>
+                  <option value="Roommate_Offer">Roommate Offer</option>
+                  <option value="Roommate_Request">Roommate Request</option>
+                  <option value="Rideshare_Offer">Rideshare Offer</option>
+                  <option value="Rideshare_Request">Rideshare Request</option>
+              </select>
+              </div>
+            </form>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header left-align brown lighten-2 white-text second">Post Details</div>
+          <div class="collapsible-body container">
+            <form>
+              <new form="newAd.form"></new>
+              <div class="input-field">
+                <a class="waves-effect waves-light btn center" ng-click="newAd.onNext('third')">Next</a>
+              </div>
+              <br>
+            </form>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header left-align brown lighten-2 white-text third">Upload Images</div>
+          <div class="collapsible-body container">
+            <br>
+            <a ngf-accept="'image/*'" ngf-select ng-model="newAd.files" ngf-multiple="true" class="left">Upload Images</a>
+            (You can upload upto 6 images)
+            <br>
+            <div class="left-align" ng-repeat="file in newAd.files">
+              {{file.name}}
+              <img ngf-thumbnail="file" ngf-size="{width: 40, height: 40, quality: 1.0}">
+            </div>
+            <form><br>
+              <div class="input-field">
+                <a class="waves-effect waves-light btn" ng-click="newAd.onNext('fourth')">Next</a>
+              </div>
+              <br>
+            </form>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header left-align brown lighten-2 white-text fourth">Contact Information</div>
+          <div class="collapsible-body container">
+            <form>
+              <contact form="newAd.form"></contact>
+              <div class="input-field">
+                <a class="waves-effect waves-light btn" ng-click="newAd.submit()">Submit</a>
+              </div>
+            </form>
+            <br>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header left-align brown lighten-2 white-text confirm">Confirmation</div>
+          <div class="collapsible-body container">
+            <form>
+              <br><br>
+              <h6>
+                Successfully submitted you post. Please check your email for the instructions to publish your post.
+              </h6>
+              <br><br>
+            </form>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </center>
+</main>
 <script>
-$('select').material_select();
+  $('select').material_select();
+  $('.datepicker').pickadate({
+    selectMonths: true, // Creates a dropdown to control month
+    selectYears: 15, // Creates a dropdown of 15 years to control year
+    min: new Date()
+  });
+  //$('.collapsible').collapsible();
 </script>
