--- a/imports/ui/components/sharegaadi/sharegaadi.css
+++ b/imports/ui/components/sharegaadi/sharegaadi.css
@@ -1,5 +1,5 @@
 html {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 12px;
   }
 
@@ -8,11 +8,3 @@ html {
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
 
-  .input-field label {
-    font-size: 0.8rem;
-    -webkit-transform: translateY(-140%);
-    -moz-transform: translateY(-140%);
-    -ms-transform: translateY(-140%);
-    -o-transform: translateY(-140%);
-    transform: translateY(-140%);
-}
