--- a/imports/ui/components/uploads/uploads.html
+++ b/imports/ui/components/uploads/uploads.html
@@ -1,20 +1,18 @@
 <form name="form">
-  <div class="input-field row s12 l12 m12">
+  <div class="input-field">
     <span class="col s6 l6 m6">
           <a ngf-select ngf-change="uploads.addImageFiles($files)" ngf-multiple="true">Upload Images</a>
   <br>OR
-  <div ngf-drop ng-model="uploads.files" class="drop-box">Drop Files Here</div>
+  <div ngf-drop ng-model="uploads.form.files" class="drop-box">Drop Files Here</div>
           </span>
     <span class="col s6 l6 m6">
-            <div ng-repeat="file in uploads.files">
+            <div ng-repeat="file in uploads.form.files">
    {{file.name}}
 <img ngf-thumbnail="file" ngf-size="{width: 40, height: 40, quality: 1.0}">
 </div>
            </span>
   </div>
-
   <!--<a class="waves-effect waves-light btn" ng-click="uploads.addImages()">submit</a>-->
- 
 </form>
 <!--<div ngf-drop
     ngf-select
