--- a/imports/ui/components/landing_page/landing_page.html
+++ b/imports/ui/components/landing_page/landing_page.html
@@ -1,12 +1,12 @@
 <div class="container center" style="margin-top: 80px">
-<a ng-class="{'green': landingPage.hover, 'white':!landingPage.hover}" 
+<a ng-class="{'brown lighten-2 white-text': landingPage.hover, 'white':!landingPage.hover}" 
     ng-mouseenter="landingPage.hover = true"
     ng-mouseleave="landingPage.hover = false"
    ui-sref="roommates" class="waves-effect waves-light btn-large black-text" style="width: 250px">
 <i class="material-icons right">home</i>Roommates
 </a> 
 <br><br>
-<a ng-class="{'green': landingPage.hover1, 'white':!landingPage.hover1}" 
+<a ng-class="{'brown lighten-2 white-text': landingPage.hover1, 'white':!landingPage.hover1}" 
     ng-mouseenter="landingPage.hover1 = true"
     ng-mouseleave="landingPage.hover1 = false"
    ui-sref="rides" class="waves-effect waves-light btn-large white black-text" style="width: 250px">
