--- a/imports/ui/components/login/login.html
+++ b/imports/ui/components/login/login.html
@@ -3,9 +3,9 @@
     <center>
       <div class="section"></div>
 
-      <h5 class="indigo-text" ng-hide="login.forgetPassword || login.create">Please, login into your account</h5>
-      <h5 class="indigo-text" ng-show="login.forgetPassword">Forget Password?</h5>
-      <h5 class="indigo-text" ng-show="login.create">Create Account</h5>
+      <h5 class="brown-text text-darken-2" ng-hide="login.forgetPassword || login.create">Please, login into your account</h5>
+      <h5 class="brown-text text-darken-2" ng-show="login.forgetPassword">Forget Password?</h5>
+      <h5 class="brown-text text-darken-2" ng-show="login.create">Create Account</h5>
       <div class="section"></div>
 
       <div class="container">
@@ -37,9 +37,9 @@
             <br />
             <center>
               <div class='row'>
-                <button ng-click="login.login()"type='submit' ng-hide="login.forgetPassword || login.create" name='btn_login' class='col s12 btn btn-large waves-effect'>Login</button>
-                <button ng-click="login.reset()"type='submit' ng-show="login.forgetPassword" name='btn_login' class='col s12 btn btn-large waves-effect'>Reset Password</button>
-                <button ng-click="login.createAccount()"type='submit' ng-show="login.create" name='btn_login' class='col s12 btn btn-large waves-effect'>Create Account</button>
+                <button ng-click="login.login()"type='submit' ng-hide="login.forgetPassword || login.create" name='btn_login' class='col s12 btn btn-large waves-effect brown lighten-2'>Login</button>
+                <button ng-click="login.reset()"type='submit' ng-show="login.forgetPassword" name='btn_login' class='col s12 btn btn-large waves-effect brown lighten-2'>Reset Password</button>
+                <button ng-click="login.createAccount()"type='submit' ng-show="login.create" name='btn_login' class='col s12 btn btn-large waves-effect brown lighten-2'>Create Account</button>
               </div>
             </center>
           </form>
