--- a/imports/ui/components/roommates/roommates.html
+++ b/imports/ui/components/roommates/roommates.html
@@ -1,5 +1,29 @@
-<div class="row center container">
-  <div class="col s12 col l9 offset-l1">
+ <br>
+ <div class="row">
+ <div class="col s4">
+   <select multiple>
+      <option value="" disabled selected>Sort By</option>
+      <option value="Apartment">Price</option>
+      <option value="Town House">Location</option>
+    </select>
+   </div>
+    <div class="col s4">
+   <select multiple>
+      <option value="" disabled selected>Sort By</option>
+      <option value="Apartment">Price</option>
+      <option value="Town House">Location</option>
+    </select>
+   </div>
+    <div class="col s4">
+   <select multiple>
+      <option value="" disabled selected>Sort By</option>
+      <option value="Apartment">Price</option>
+      <option value="Town House">Location</option>
+    </select>
+   </div>
+ </div>
+<div class="row">
+  <!--<div class="col s12 col l9 offset-l1">
    <div class="col s3">
   <input type="text" placeholder="Location" ng-model="roommates.searchText"/>
    </div>
@@ -19,22 +43,41 @@
       <option value="Town House">Location</option>
     </select>
    </div>
-  </div>
+  </div>-->
   <div dir-paginate="roommates in roommates.roommates | itemsPerPage: roommates.perPage" total-items="roommates.roommatesCount">
-        <div class="card-panel white  col s12 col l9 offset-l1">
+        <!--<div class="card-panel white  col s12 col l9 offset-l1">
           <div class="black-text left">
            <div class="chip">{{roommates.category.replace('Roommate_', '')}}</div>
            <a>{{roommates.beds}} Bedroom {{roommates.subcategory}} in {{roommates.location.replace(', United States', '')}} </a>
           </div>
           <br>
           <div class="black-text left">
-          {{roommates.price | currency:"$":0 }} per month | {{roommates.sqft}} Sqft
+          {{roommates.price | currency:"$":0 }} /month | {{roommates.sqft}} Sqft
          | {{roommates.dateFrom | date:'d MMM yy'}} to {{roommates.dateTo | date:'d MMM yy'}}
          |<span am-time-ago="{{roommates.createdAt}}"></span>| {{roommates.contact.name}}
          | {{roommates.contact.gender}}
          
           </div>
-    </div>
+    </div>-->
+    <dic class="col s12 m6 l3">
+    <div class="card">
+        <div class="card-image">
+          <img src="img/sky.jpg">
+          <!--<span class="card-title">{{roommates.price | currency:"$":0 }} /month</span>-->
+          <!--<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>-->
+        </div>
+        <div class="card-content">
+          <p><a>{{roommates.beds}} Bedroom {{roommates.subcategory}} in {{roommates.location.replace(', United States', '')}} </a></p>
+          <p>
+            {{roommates.price | currency:"$":0 }} /month | {{roommates.sqft}} Sqft
+         | {{roommates.dateFrom | date:'d MMM yy'}} to {{roommates.dateTo | date:'d MMM yy'}}
+         |<span am-time-ago="{{roommates.createdAt}}"></span>| {{roommates.contact.name}}
+          {{roommates.contact.gender}}
+          </p>
+        </div>
+      </div>
+  </div>
+</div>
 </div>
 </div>
 <dir-pagination-controls on-page-change="roommates.pageChanged(newPageNumber)"></dir-pagination-controls>
